src/test/ui/privacy/private-struct-field.stderr
error[E0616]: field `meows` of struct `cat::Cat` is private
  --> $DIR/private-struct-field.rs:13:16
   |
LL |     assert_eq!(nyan.meows, 52);
   |                ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0616`.
